--- a/style.css
+++ b/style.css
@@ -2,29 +2,50 @@ body {
     margin: 0;
 }
 
-#container {
-    margin: 0 auto;
-    width: 90%;
-    height: 100vh;
-    border: black solid 2px;
-}
+    
 
 nav {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 10vh;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.border-bottom-nav {
-    height: 5px;
-    background-color: black;
+section{
+    width: 75vw;
+    margin: auto;
+    font-family: 'Roboto', sans-serif;
 }
 
 
-main {
-    background-color: lime;
-    width: 90%;
+
+
+
+.chumba-container{
+    margin: auto;
+    width: 75vw;
     height: 20vh;
-    border: greenyellow solid 4px;
+    border: black solid 1px; 
+    border-radius: 15px;
+    box-shadow: 5px 25px 21px -5px rgba(0,0,0,0.1);
+    overflow: hidden;
+
+}
+.chumba-demo{
+    margin: auto;
+    width: 95%;
+    height: 100%;
+}
+
+
+.chumbaimg {
+    width: 50px;
+    height: 50px;
+}
+.chumba-follow-path{
+    position: relative;
+    top: 25px;
+    
 }
